add big picture block

--- a/index.html
+++ b/index.html
@@ -135,29 +135,29 @@
     </section>
 
     <!-- Полноэкранный показ изображения -->
-    <section class="big-picture  overlay  hidden">
+    <section class="big-picture  overlay js-picture  hidden">
       <h2 class="big-picture__title  visually-hidden">Просмотр фотографии</h2>
       <div class="big-picture__preview">
 
         <!-- Просмотр изображения -->
         <div class="big-picture__img">
-          <img src="img/logo-background-3.jpg" alt="Девушка в купальнике" width="600" height="600">
+          <img src="img/logo-background-3.jpg" class="js-picture-img" alt="Девушка в купальнике" width="600" height="600">
         </div>
 
         <!-- Информация об изображении. Подпись, комментарии, количество лайков -->
         <div class="big-picture__social  social">
           <div class="social__header">
             <img class="social__picture" src="img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
-            <p class="social__caption">Тестим новую камеру! =)</p>
-            <p class="social__likes">Нравится <span class="likes-count">356</span></p>
+            <p class="social__caption js-picture-description">Тестим новую камеру! =)</p>
+            <p class="social__likes">Нравится <span class="likes-count js-picture-likes">356</span></p>
           </div>
 
           <!-- Комментарии к изображению -->
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
-          <ul class="social__comments">
-            <li class="social__comment">
-              <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
-              <p class="social__text">Мега фото! Просто обалдеть. Как вам так удалось?</p>
+          <div class="social__comment-count js-comments-count-block">5 из <span class="comments-count js-comments-count">125</span> комментариев</div>
+          <ul class="social__comments js-social-comments">
+            <li class="social__comment js-social-comment">
+              <img class="social__picture js-social-comment-picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
+              <p class="social__text js-social-comment-text">Мега фото! Просто обалдеть. Как вам так удалось?</p>
             </li>
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-3.svg" alt="Аватар комментатора фотографии" width="35" height="35">
@@ -166,7 +166,7 @@
           </ul>
 
           <!-- Кнопка для загрузки новой порции комментариев -->
-          <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
+          <button type="button" class="social__comments-loader  comments-loader js-comments-loader">Загрузить еще</button>
 
           <!-- Форма для отправки комментария -->
           <div class="social__footer">
