--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </fieldset>
 
               <!-- Кнопка для отправки данных на сервер -->
-              <button type="submit" class="img-upload__submit" id="upload-submit">Опубликовать</button>
+              <button type="submit" class="img-upload__submit js-upload-submit" id="upload-submit">Опубликовать</button>
             </div>
           </div>
         </form>
