--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
   <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
 </template>
 
-<script defer src="js/main.js"></script>
+<script defer src="js/utils.js"></script>
+<script defer src="js/data.js"></script>
+<script defer src="js/picture.js"></script>
+<script defer src="js/preview.js"></script>
 <script defer src="js/editor.js"></script>
 </body>
 </html>
